# AutomationAgent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Backend/agents/: graph.py  nodes.py
Backend/prompts/: requirementgen_prompt.py  robotscriptgen_prompt.py  testcasegen_prompt.py  traceabilitygen_prompt.py
Backend/schemas/: requirementschema.py  testcaseschema.py
Backend/services/: csvexpoerter.py  documentloader.py  requirementgenerator.py  robotscriptgenerator.py  testcasegenerator.py  traceabilitygenerator.py
Frontend/: app.py
Frontend/design/: Jiotel_FMS_HLD_v2.4.docx  Software Requirements Specification.docx
output/: generated_testcases.csv  traceability_matrix.md
