[project]
name = "automationagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.2",
    "pandas>=3.0.1",
    "pypdf>=6.8.0",
    "python-docx>=1.2.0",
    "streamlit>=1.19.0",
]
